[tool.poetry]
name = "user-stories-backend"
version = "0.1.0"
description = ""
authors = ["Jacob Shore <jacobshore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
peewee = "^3.15.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-check = "^1.0.10"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
