[tool.poetry]
name = "user-stories-backend"
version = "0.1.0"
description = ""
authors = ["Jacob Shore <jacobshore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
peewee = "^3.15.3"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
pytz = "^2022.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-check = "^1.0.10"
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.0"
ipython = "^8.6.0"
bpython = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
